infra/terraform/modules/sg/rds_sg.tf
resource "aws_security_group" "rds_sg" {
  count = var.create_rds ? 1 : 0

  name   = "${var.prefix}-rds-sg"
  vpc_id = var.vpc_id

  description = "RDS security group"

  # EC2에서 RDS 접속 허용
  ingress {
    description = "Allow MySQL from EC2"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    security_groups = [aws_security_group.ec2_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.prefix}-rds-sg"
  }
}
